# FairTrace

./: README.md
fairtrace-backend/: .env  backup.dump  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
fairtrace-backend/billing/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
fairtrace-backend/blockchain/: FarmerContract.json  deployments.json  hardhat.config.cjs  hardhat.config.ts  package-lock.json  package.json  tasks.py  tsconfig.json  utils.py  web3utils.py
fairtrace-backend/contracts/: FairTraceRegistry.sol
fairtrace-backend/fairtrace_backend/: .env  asgi.py  celery.py  settings.py  urls.py  wsgi.py
fairtrace-backend/farmers/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py  web3_helpers.py
fairtrace-backend/feedbacks/: models.py  urls.py  views.py
fairtrace-backend/ganache-db/: 000005.ldb  000011.ldb  LOG  LOG.old  MANIFEST-000010
fairtrace-backend/ganache_db/: 000005.ldb  000008.ldb  000011.ldb  000016.ldb  000018.ldb  000021.ldb  000029.ldb  000031.ldb  000034.ldb  000037.ldb  000042.ldb  000044.ldb  000047.ldb  000050.ldb  000055.ldb  000057.ldb  000060.ldb  000063.ldb  000065.ldb  000067.ldb  000070.ldb  LOG  LOG.old  MANIFEST-000004  MANIFEST-000010  MANIFEST-000020  MANIFEST-000026  MANIFEST-000030  MANIFEST-000036  MANIFEST-000049  MANIFEST-000062  MANIFEST-000069
fairtrace-backend/logistics/: models.py  serializers.py  urls.py  views.py
fairtrace-backend/market/: models.py  permissions.py  serializers.py  urls.py  views.py
fairtrace-backend/payments/: models.py  urls.py  views.py
(+142 files in other folders)
