[tool.poetry]
name = "fairtrace"
version = "0.1.0"
description = "FairTrace backend"
authors = ["Kileyydev"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-dotenv = "^1.0.0"
pyunormalize = "^16.0.0"
torch = "^2.0.0"
torchvision = "^0.15.0"
numpy = "^1.24.0"
opencv-python = "^4.8.0"
pillow = "^10.0.0"
pandas = "^2.0.0"
scipy = "^1.11.0"
filterpy = "^1.4.5"
lap = "^0.4.0"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
