[tool.poetry]
name = "fairtrace"
version = "0.1.0"
description = "FairTrace backend"
authors = ["Kileyydev"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-dotenv = "^1.0.0"
pyunormalize = "^16.0.0"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.0.1+cpu-cp310-cp310-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cpu/torchvision-0.15.2+cpu-cp310-cp310-linux_x86_64.whl" }
numpy = "^1.24.0"
opencv-python = "^4.8.0"
pillow = "^10.0.0"
pandas = "^2.0.0"
scipy = "^1.11.0"
filterpy = "^1.4.5"
lap = "^0.4.0"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
